src/components/IconsBar/IconsBar.scss
@import "../App/variables.scss";
@import "../App/animations.scss";
@import "../App/mixins.scss";

.IconsBar {
    display: flex;
    justify-content: center;
    background-color: $color-grey-light;
    padding: 1rem 0;
    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
    margin-bottom: 2rem;

    @include media(tab-port) {
        border-bottom: none;
        margin-bottom: 0;
    }

    &--icons-container {
        display: flex;
        justify-content: center;
        max-width: 75vw;

        @include media(tab-port) {
            flex-direction: column;
            max-width: initial;
        }

    }

    &--box {
        width: 25%;
        text-align: center;
        transition: all ease 500ms;
        padding: 1rem;

        @include media(tab-port) {
            width: 70%;
            margin: 0 auto;
        }

        &:hover {
            transform: scale(1.20);
            background-color: $color-white;
            border-radius: .5rem;
            border-right: none;

            @include media(tab-port) {
                border-bottom: none;
            }
        }
    }

    &__h2 {
        &-1 {
            color: $color-primary-dark;
        }

        &-2 {
            color: $color-secondary-dark;
        }

        &-3 {
            color: $color-tertiary-dark;
        }
    }
}


.box {
    &-1 {
        border-right: 2px solid $color-primary-dark;

        @include media(tab-port) {
            border-right: none;
            border-bottom: 2px solid $color-primary-dark;
        }

        &:hover .fa-code-branch,
        &:hover .IconsBar__h2-1 {
            color: $color-primary-light;
        }
    }

    &-2 {
        border-right: 2px solid $color-secondary-dark;

        @include media(tab-port) {
            border-right: none;
            border-bottom: 2px solid $color-secondary-dark;
        }

        &:hover .fa-book,
        &:hover .IconsBar__h2-2 {
            color: $color-secondary-light;
        }
    }

    &-3 {
        border-right: 2px solid $color-tertiary-dark;

        @include media(tab-port) {
            border-right: none;
            border-bottom: 2px solid $color-tertiary-dark;
        }

        &:hover .fa-bug,
        &:hover .IconsBar__h2-3 {
            color: $color-tertiary-light;
        }
    }
}

.fa-code-branch {
    color: $color-primary-dark;

    &:hover {
        animation-name: rubberBand;
        animation-duration: 1s;
    }
}

.fa-book {
    color: $color-secondary-dark;

    &:hover {
        animation-name: rubberBand;
        animation-duration: 1s;
    }
}

.fa-bug {
    color: $color-tertiary-dark;

    &:hover {
        animation-name: rubberBand;
        animation-duration: 1s;
    }
}

